--- a/meusite.html
+++ b/meusite.html
@@ -19,7 +19,7 @@
 <!-- ================================================================== -->
 <!-- imagem -->
 <div style="align-self: center;">
-    <img src="imgs/imagem1.png" alt="">
+    <img src="https://github.com/marco0antonio0/Estudo_dev_web/blob/main/imgs/imagem1.png?raw=true" alt="">
 </div>
 <!-- ================================================================== -->
 <!-- paragrafo da reportagem -->
